--- a/Tracing.Netfx/Tracing.Netfx.csproj
+++ b/Tracing.Netfx/Tracing.Netfx.csproj
@@ -65,6 +65,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleTracer.cs" />
+    <Compile Include="ConsoleTracerFactory.cs" />
+    <Compile Include="DefaultTracerFactoryConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
