--- a/Tracing.UWP/Tracing.UWP.csproj
+++ b/Tracing.UWP/Tracing.UWP.csproj
@@ -108,6 +108,15 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Tracing.Netfx\ConsoleTracer.cs">
+      <Link>ConsoleTracer.cs</Link>
+    </Compile>
+    <Compile Include="..\Tracing.Netfx\ConsoleTracerFactory.cs">
+      <Link>ConsoleTracerFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Tracing.Netfx\DefaultTracerFactoryConfiguration.cs">
+      <Link>DefaultTracerFactoryConfiguration.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Tracing.UWP.rd.xml" />
   </ItemGroup>
