--- a/Tracing.iOS/Tracing.iOS.csproj
+++ b/Tracing.iOS/Tracing.iOS.csproj
@@ -37,9 +37,15 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="ConsoleTracer.cs" />
-    <Compile Include="ConsoleTracerFactory.cs" />
-    <Compile Include="DefaultTracerFactoryConfiguration.cs" />
+    <Compile Include="..\Tracing.Netfx\ConsoleTracer.cs">
+      <Link>ConsoleTracer.cs</Link>
+    </Compile>
+    <Compile Include="..\Tracing.Netfx\ConsoleTracerFactory.cs">
+      <Link>ConsoleTracerFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Tracing.Netfx\DefaultTracerFactoryConfiguration.cs">
+      <Link>DefaultTracerFactoryConfiguration.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
