--- a/Tracing.WindowsPhone81/Tracing.WindowsPhone81.csproj
+++ b/Tracing.WindowsPhone81/Tracing.WindowsPhone81.csproj
@@ -92,6 +92,7 @@
     </Reference>
   </ItemGroup>
   <Import Project="..\Tracing.Shared\Tracing.Shared.projitems" Label="Shared" />
+  <Import Project="..\Tracing.Shared.WinRT\Tracing.Shared.WinRT.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
