--- a/Tracing.iOSUnified/Tracing.iOSUnified.csproj
+++ b/Tracing.iOSUnified/Tracing.iOSUnified.csproj
@@ -37,13 +37,13 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\Tracing.iOS\ConsoleTracer.cs">
+    <Compile Include="..\Tracing.Netfx\ConsoleTracer.cs">
       <Link>ConsoleTracer.cs</Link>
     </Compile>
-    <Compile Include="..\Tracing.iOS\ConsoleTracerFactory.cs">
+    <Compile Include="..\Tracing.Netfx\ConsoleTracerFactory.cs">
       <Link>ConsoleTracerFactory.cs</Link>
     </Compile>
-    <Compile Include="..\Tracing.iOS\DefaultTracerFactoryConfiguration.cs">
+    <Compile Include="..\Tracing.Netfx\DefaultTracerFactoryConfiguration.cs">
       <Link>DefaultTracerFactoryConfiguration.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
