--- a/Tracing.WindowsPhone8/Tracing.WindowsPhone8.csproj
+++ b/Tracing.WindowsPhone8/Tracing.WindowsPhone8.csproj
@@ -90,9 +90,7 @@
     <Compile Include="..\Tracing.Netfx\ConsoleTracerFactory.cs">
       <Link>ConsoleTracerFactory.cs</Link>
     </Compile>
-    <Compile Include="..\Tracing.Netfx\DefaultTracerFactoryConfiguration.cs">
-      <Link>DefaultTracerFactoryConfiguration.cs</Link>
-    </Compile>
+    <Compile Include="DefaultTracerFactoryConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
