--- a/Samples/TracingSample.Netfx/packages.config
+++ b/Samples/TracingSample.Netfx/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="CrossPlatformAdapter" version="1.0.12" targetFramework="net452" />
-  <package id="Guards" version="1.0.10" targetFramework="net45" />
-  <package id="TypeConverter" version="1.0.27" targetFramework="net45" />
+  <package id="CrossPlatformLibrary" version="1.0.73" targetFramework="net452" />
+  <package id="Guards" version="1.0.10" targetFramework="net452" />
 </packages>
