--- a/Tests/IntegrationTests.Android/packages.config
+++ b/Tests/IntegrationTests.Android/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="MonoAndroid23" />
   <package id="CrossPlatformAdapter" version="1.0.12" targetFramework="MonoAndroid50" />
-  <package id="CrossPlatformLibrary" version="1.0.71" targetFramework="MonoAndroid60" />
-  <package id="FluentAssertions" version="4.2.2" targetFramework="monoandroid60" />
+  <package id="CrossPlatformLibrary" version="1.0.73" targetFramework="monoandroid60" />
+  <package id="FluentAssertions" version="4.5.0" targetFramework="monoandroid60" />
   <package id="Guards" version="1.0.10" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid23" />
   <package id="Xamarin.Forms" version="1.4.4.6392" targetFramework="monoandroid60" />
