--- a/Tests/IntegrationTests.WindowsStore/packages.config
+++ b/Tests/IntegrationTests.WindowsStore/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="win81" />
   <package id="CrossPlatformAdapter" version="1.0.12" targetFramework="win81" />
-  <package id="CrossPlatformLibrary" version="1.0.71" targetFramework="win81" />
-  <package id="FluentAssertions" version="4.2.2" targetFramework="win81" />
+  <package id="CrossPlatformLibrary" version="1.0.73" targetFramework="win81" />
+  <package id="FluentAssertions" version="4.5.0" targetFramework="win81" />
   <package id="Guards" version="1.0.10" targetFramework="win81" />
+  <package id="Tracing" version="1.0.1-pre4" targetFramework="win81" />
   <package id="Xamarin.Forms" version="1.4.4.6392" targetFramework="win81" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="win81" />
   <package id="xunit.core" version="2.1.0" targetFramework="win81" />
