--- a/Tests/IntegrationTests.iOS/packages.config
+++ b/Tests/IntegrationTests.iOS/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
   <package id="CrossPlatformAdapter" version="1.0.12" targetFramework="xamarinios10" />
-  <package id="CrossPlatformLibrary" version="1.0.72-pre3" targetFramework="xamarinios10" />
-  <package id="FluentAssertions" version="4.3.2" targetFramework="xamarinios10" />
+  <package id="CrossPlatformLibrary" version="1.0.73" targetFramework="xamarinios10" />
+  <package id="FluentAssertions" version="4.5.0" targetFramework="xamarinios10" />
   <package id="Guards" version="1.0.10" targetFramework="xamarinios10" />
   <package id="TypeConverter" version="1.0.27" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="xamarinios10" />
