--- a/Tests/IntegrationTests/packages.config
+++ b/Tests/IntegrationTests/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="CrossPlatformAdapter" version="1.0.12" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="CrossPlatformLibrary" version="1.0.71" targetFramework="portable-net45+dnxcore50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="FluentAssertions" version="4.2.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="CrossPlatformLibrary" version="1.0.73" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="FluentAssertions" version="4.5.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Guards" version="1.0.10" targetFramework="portable-net45+dnxcore50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="Tracing" version="1.0.1-pre4" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="xunit" version="2.1.0" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="xunit.assert" version="2.1.0" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
