--- a/Tracing.NuGet/Package.nuspec
+++ b/Tracing.NuGet/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Tracing</id>
-    <version>1.0.0</version>
+    <version>1.0.1-pre4</version>
     <title>Tracing.NET - A simple Logger/Tracer abstraction</title>
     <authors>Thomas Galliker</authors>
     <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -29,10 +29,15 @@
   </metadata>
   <files>
     <!--PCL-->
-    <file src="..\Tracing\bin\Release\Tracing.dll" target="lib\portable-net45+dnxcore50+wp80+MonoAndroid10+xamarinios10+MonoTouch10\Tracing.dll" />
-    <file src="..\Tracing\bin\Release\Tracing.pdb" target="lib\portable-net45+dnxcore50+wp80+MonoAndroid10+xamarinios10+MonoTouch10\Tracing.pdb" />
-    <file src="..\Tracing\bin\Release\Tracing.xml" target="lib\portable-net45+dnxcore50+wp80+MonoAndroid10+xamarinios10+MonoTouch10\Tracing.xml" />
+    <file src="..\Tracing\bin\Release\Tracing.dll" target="lib\portable-net45+wp8+win8+wpa81\Tracing.dll" />
+    <file src="..\Tracing\bin\Release\Tracing.pdb" target="lib\portable-net45+wp8+win8+wpa81\Tracing.pdb" />
+    <file src="..\Tracing\bin\Release\Tracing.xml" target="lib\portable-net45+wp8+win8+wpa81\Tracing.xml" />
 
+    <!--.Net 4.5-->
+    <file src="..\Tracing.Netfx\bin\Release\Tracing.dll" target="lib\net45\Tracing.dll" />
+    <file src="..\Tracing.Netfx\bin\Release\Tracing.pdb" target="lib\net45\Tracing.pdb" />
+    <file src="..\Tracing.Netfx\bin\Release\Tracing.xml" target="lib\net45\Tracing.xml" />
+    
     <!--Xamarin.Android-->
     <file src="..\Tracing.Android\bin\Release\Tracing.dll" target="lib\monoandroid10\Tracing.dll" />
     <file src="..\Tracing.Android\bin\Release\Tracing.pdb" target="lib\monoandroid10\Tracing.pdb" />
