--- a/Tests/IntegrationTests.WindowsPhone8/packages.config
+++ b/Tests/IntegrationTests.WindowsPhone8/packages.config
@@ -4,16 +4,16 @@
   <package id="CrossPlatformAdapter" version="1.0.12" targetFramework="wp80" />
   <package id="CrossPlatformLibrary" version="1.0.73" targetFramework="wp8" />
   <package id="FluentAssertions" version="4.5.0" targetFramework="wp8" />
-  <package id="Guards" version="1.0.10" targetFramework="wp80" />
+  <package id="Guards" version="1.0.11" targetFramework="wp8" />
   <package id="Tracing" version="1.0.1-pre4" targetFramework="wp8" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
-  <package id="Xamarin.Forms" version="1.4.4.6392" targetFramework="wp8" />
+  <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="wp8" />
   <package id="xunit" version="2.1.0" targetFramework="wp80" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="wp80" />
   <package id="xunit.assert" version="2.1.0" targetFramework="wp80" />
   <package id="xunit.core" version="2.1.0" targetFramework="wp80" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="wp80" />
   <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="wp80" />
-  <package id="xunit.runner.devices" version="1.2.0-rc3" targetFramework="wp8" />
+  <package id="xunit.runner.devices" version="2.0.0" targetFramework="wp8" />
   <package id="xunit.runner.utility" version="2.1.0" targetFramework="wp8" />
 </packages>
