--- a/Tests/IntegrationTests.WindowsStore/packages.config
+++ b/Tests/IntegrationTests.WindowsStore/packages.config
@@ -4,13 +4,13 @@
   <package id="CrossPlatformAdapter" version="1.0.12" targetFramework="win81" />
   <package id="CrossPlatformLibrary" version="1.0.73" targetFramework="win81" />
   <package id="FluentAssertions" version="4.5.0" targetFramework="win81" />
-  <package id="Guards" version="1.0.10" targetFramework="win81" />
+  <package id="Guards" version="1.0.11" targetFramework="win81" />
   <package id="Tracing" version="1.0.1-pre4" targetFramework="win81" />
-  <package id="Xamarin.Forms" version="1.4.4.6392" targetFramework="win81" />
+  <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="win81" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="win81" />
   <package id="xunit.core" version="2.1.0" targetFramework="win81" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="win81" />
   <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="win81" />
-  <package id="xunit.runner.devices" version="1.2.0-rc3" targetFramework="win81" />
+  <package id="xunit.runner.devices" version="2.0.0" targetFramework="win81" />
   <package id="xunit.runner.utility" version="2.1.0" targetFramework="win81" />
 </packages>
