--- a/Tests/IntegrationTests.iOS/IntegrationTests.iOS.csproj
+++ b/Tests/IntegrationTests.iOS/IntegrationTests.iOS.csproj
@@ -109,7 +109,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Guards, Version=1.0.0.0, Culture=neutral, PublicKeyToken=ac6aedb73a72f46e, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Guards.1.0.10\lib\xamarin.ios10\Guards.dll</HintPath>
+      <HintPath>..\..\packages\Guards.1.0.11\lib\xamarin.ios10\Guards.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -124,9 +124,8 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="TypeConverter, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b1d2d39c48564dfb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\TypeConverter.1.0.27\lib\xamarin.ios10\TypeConverter.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Tracing">
+      <HintPath>..\..\packages\Tracing.1.0.1-pre4\lib\xamarin.ios10\Tracing.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.0.1.6505\lib\Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
@@ -175,6 +174,10 @@
       <Name>Tracing.iOSUnified</Name>
       <IsAppExtension>false</IsAppExtension>
       <IsWatchApp>false</IsWatchApp>
+    </ProjectReference>
+    <ProjectReference Include="..\IntegrationTests\IntegrationTests.csproj">
+      <Project>{10332c36-d054-41ca-8997-da71a8cbc867}</Project>
+      <Name>IntegrationTests</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
