--- a/Samples/TracingSample.WindowsStore/packages.config
+++ b/Samples/TracingSample.WindowsStore/packages.config
@@ -4,5 +4,5 @@
   <package id="CrossPlatformAdapter" version="1.0.12" targetFramework="win81" />
   <package id="CrossPlatformLibrary" version="1.0.73" targetFramework="win81" />
   <package id="Guards" version="1.0.11" targetFramework="win81" />
-  <package id="Tracing" version="1.0.1-pre4" targetFramework="win81" />
+  <package id="Tracing" version="1.0.1" targetFramework="win81" />
 </packages>
