--- a/Tests/IntegrationTests.WindowsPhone8/packages.config
+++ b/Tests/IntegrationTests.WindowsPhone8/packages.config
@@ -3,9 +3,9 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="wp80" />
   <package id="CrossPlatformAdapter" version="1.0.12" targetFramework="wp80" />
   <package id="CrossPlatformLibrary" version="1.0.73" targetFramework="wp8" />
-  <package id="FluentAssertions" version="4.5.0" targetFramework="wp8" />
+  <package id="FluentAssertions" version="4.6.3" targetFramework="wp8" />
   <package id="Guards" version="1.0.11" targetFramework="wp8" />
-  <package id="Tracing" version="1.0.1-pre4" targetFramework="wp8" />
+  <package id="Tracing" version="1.0.1" targetFramework="wp8" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
   <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="wp8" />
   <package id="xunit" version="2.1.0" targetFramework="wp80" />
