Update nuget dependencies

--- a/Tests/IntegrationTests.iOS/app.config
+++ b/Tests/IntegrationTests.iOS/app.config
@@ -6,6 +6,10 @@
         <assemblyIdentity name="FluentAssertions.Core" publicKeyToken="33f2691a05b67b6a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Guards" publicKeyToken="ac6aedb73a72f46e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.14.0" newVersion="1.0.14.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
