--- a/Tests/IntegrationTests.WindowsPhone8/app.config
+++ b/Tests/IntegrationTests.WindowsPhone8/app.config
@@ -10,6 +10,10 @@
         <assemblyIdentity name="xunit.runner.utility.dotnet" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.0.3179" newVersion="2.1.0.3179" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Guards" publicKeyToken="ac6aedb73a72f46e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.14.0" newVersion="1.0.14.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
