--- a/Tracing.NuGet/Package.nuspec
+++ b/Tracing.NuGet/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Tracing</id>
-    <version>2.0.0-pre</version>
+    <version>2.0.0-alpha1</version>
     <title>Tracing.NET - A simple Logger/Tracer abstraction</title>
     <authors>Thomas Galliker</authors>
     <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -12,8 +12,8 @@
     <summary>An extensible logging/tracing framework for all major .Net platforms.</summary>
     <description>Tracing.NET provides basic logging/tracing infrastructure such as an abstracted logger interface ITracer as well as platform specific tracer implementations.</description>
     <tags>
-      tracing tracer logging logger ITracer log trace
-      xamarin pcl windows phone android xamarin.forms xamarin.ios ios monoandroid monodroid monotouch
+      tracing tracer logging logger ITracer ILogger log trace abstraction
+      xamarin pcl android xamarin.forms xamarin.ios ios monoandroid monodroid monotouch
     </tags>
     <releaseNotes>
 2.0.0
@@ -31,7 +31,7 @@
 1.0.1
 - Initial release
     </releaseNotes>
-    <copyright>Copyright 2017</copyright>
+    <copyright>Copyright 2018</copyright>
     <language>en-US</language>
     <dependencies/>
   </metadata>
@@ -60,6 +60,11 @@
     <file src="..\Tracing.UWP\bin\Release\Tracing.dll" target="lib\uap10.0\Tracing.dll" />
     <file src="..\Tracing.UWP\bin\Release\Tracing.pdb" target="lib\uap10.0\Tracing.pdb" />
     <file src="..\Tracing.UWP\bin\Release\Tracing.xml" target="lib\uap10.0\Tracing.xml" />
+
+    <!--Net Standard 1.0-->
+    <file src="..\Tracing.NetStandard\bin\Release\netstandard1.0\Paging.dll" target="lib\netstandard1.0\Tracing.dll" />
+    <file src="..\Tracing.NetStandard\bin\Release\netstandard1.0\Paging.pdb" target="lib\netstandard1.0\Tracing.pdb" />
+    <file src="..\Tracing.NetStandard\bin\Release\netstandard1.0\Paging.deps.json" target="lib\netstandard1.0\Tracing.deps.json" />
 
     <file src="tools\init.ps1" target="tools\init.ps1" />
     <file src="tools\install.ps1" target="tools\install.ps1" />
