--- a/Tracing.NuGet/Package.nuspec
+++ b/Tracing.NuGet/Package.nuspec
@@ -62,9 +62,9 @@
     <file src="..\Tracing.UWP\bin\Release\Tracing.xml" target="lib\uap10.0\Tracing.xml" />
 
     <!--Net Standard 1.0-->
-    <file src="..\Tracing.NetStandard\bin\Release\netstandard1.0\Paging.dll" target="lib\netstandard1.0\Tracing.dll" />
-    <file src="..\Tracing.NetStandard\bin\Release\netstandard1.0\Paging.pdb" target="lib\netstandard1.0\Tracing.pdb" />
-    <file src="..\Tracing.NetStandard\bin\Release\netstandard1.0\Paging.deps.json" target="lib\netstandard1.0\Tracing.deps.json" />
+    <file src="..\Tracing.NetStandard\bin\Release\netstandard1.0\Tracing.dll" target="lib\netstandard1.0\Tracing.dll" />
+    <file src="..\Tracing.NetStandard\bin\Release\netstandard1.0\Tracing.pdb" target="lib\netstandard1.0\Tracing.pdb" />
+    <file src="..\Tracing.NetStandard\bin\Release\netstandard1.0\Tracing.deps.json" target="lib\netstandard1.0\Tracing.deps.json" />
 
     <file src="tools\init.ps1" target="tools\init.ps1" />
     <file src="tools\install.ps1" target="tools\install.ps1" />
