--- a/build.Tracing.yml
+++ b/build.Tracing.yml
@@ -1,10 +1,11 @@
+
 ####################################################################
-# VSTS Build Configuration, Version 1.1
+# VSTS Build Configuration, Version 1.2
 #
 # (c)2018 superdev GmbH
 ####################################################################
 
-name: 2.0.$(date:yy)$(DayOfYear).$(rev:rr)
+name: 2.1.$(date:yy)$(DayOfYear).$(rev:rr)
   
 queue:
   name: Hosted VS2017
@@ -18,12 +19,18 @@ trigger:
 - develop
 - release/*
 
+variables:
+  solution: 'Tracing.sln'
+  buildPlatform: 'Any CPU'
+  buildConfiguration: 'Release'
+  buildVersionPostfix: '-pre'
+
 steps:
 - task: bleddynrichards.Assembly-Info-Task.Assembly-Info-Task.Assembly-Info-Task@1
   displayName: 'Set Assembly Manifest Data'
   inputs:
     FileNames: |
-     Tracing.NetStandard.csproj # Refactor to netstandard and use Tracing.csproj here
+     Tracing.csproj
      AssemblyInfo.cs
     InsertAttributes: true
     Title: 'Tracing'
@@ -54,30 +61,33 @@ steps:
 - task: VSBuild@1
   displayName: 'Build solution'
   inputs:
-    solution: '$(Parameters.solution)'
+    solution: '$(solution)'
     msbuildArgs: ''
     platform: '$(BuildPlatform)'
     configuration: '$(BuildConfiguration)'
 
 - task: DotNetCoreCLI@2
   displayName: 'Run UnitTests'
-  continueOnError: false
   inputs:
     command: test
     projects: '**/*.Tests.csproj'
     arguments: ''
 
-- task: NuGetCommand@2
+- task: DotNetCoreCLI@2
   displayName: 'Pack NuGet PreRelease'
   inputs:
-    command: custom
-    arguments: pack Package.nuspec -Version $(PackageVersionPre) -NoPackageAnalysis -outputdirectory $(Build.ArtifactStagingDirectory)\artifacts
+    command: pack
+    packagesToPack: Tracing/Tracing.csproj
+    versioningScheme: byEnvVar
+    versionEnvVar: PackageVersionPre
 
-- task: NuGetCommand@2
+- task: DotNetCoreCLI@2
   displayName: 'Pack NuGet Prod'
   inputs:
-    command: custom
-    arguments: pack Package.nuspec -Version $(PackageVersion) -NoPackageAnalysis -outputdirectory $(Build.ArtifactStagingDirectory)\artifacts
+    command: pack
+    packagesToPack: Tracing/Tracing.csproj
+    versioningScheme: byEnvVar
+    versionEnvVar: PackageVersion
 
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
