--- a/Samples/TracingSample.Netfx/App.config
+++ b/Samples/TracingSample.Netfx/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
+
+  <system.diagnostics>
+    <sources>
+      <source name="log" switchValue="All">
+        <listeners>
+          <clear />
+          <add name="Console" type="Tracing.TraceListener, Tracing" initializeData="TracerName"/>
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
+
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <runtime>
