--- a/Samples/TracingSample.Netfx/TracingSample.Netfx.csproj
+++ b/Samples/TracingSample.Netfx/TracingSample.Netfx.csproj
@@ -33,24 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CrossPlatformLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\CrossPlatformLibrary.1.0.73\lib\net45\CrossPlatformLibrary.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="CrossPlatformLibrary.Platform, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\CrossPlatformLibrary.1.0.73\lib\net45\CrossPlatformLibrary.Platform.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Guards, Version=1.0.14.0, Culture=neutral, PublicKeyToken=ac6aedb73a72f46e, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Guards.1.0.14\lib\net45\Guards.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PlatformAdapter, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6631b0d7444ed877, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\CrossPlatformAdapter.1.0.12\lib\portable-net45+wp8+wpa81+win81+netcore45+monoandroid1+xamarin.ios10\PlatformAdapter.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -67,17 +51,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Tracing.Netfx\Tracing.Netfx.csproj">
-      <Project>{bba4d7d7-7e41-4796-bc70-ddc13cfcfbc6}</Project>
-      <Name>Tracing.Netfx</Name>
+    <ProjectReference Include="..\..\Tracing.Extensions\Tracing.Console\Tracing.Console.csproj">
+      <Project>{d46e2d65-593b-48c4-96b1-32edf036b79e}</Project>
+      <Name>Tracing.Console</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TracingSample\TracingSample.csproj">
-      <Project>{c25ca810-84ae-413e-bede-c77ed58b7d0e}</Project>
-      <Name>TracingSample</Name>
+    <ProjectReference Include="..\..\Tracing\Tracing.csproj">
+      <Project>{3DF2E5D9-6AA9-4C81-8A86-2F351DEE6220}</Project>
+      <Name>Tracing</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
